--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,32 @@
-# Logs
-logs
-*.log
+# dependencies
+node_modules/
+
+# build output
+dist/
+build/
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-.env
+# editor directories and files
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Mac / Linux / Windows system files
+.DS_Store
+Thumbs.db
